FIX: fonts / and - issues, auction info below the fold issue, timer alignment issues

--- a/packages/nouns-webapp/src/components/Auction/Auction.module.css
+++ b/packages/nouns-webapp/src/components/Auction/Auction.module.css
@@ -27,6 +27,7 @@
     padding-right: unset;
     padding-left: unset;
     width: 60%;
+    background-color: white;
   }
 }
 
