--- a/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
+++ b/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
@@ -75,8 +75,8 @@
   }
 
   .wrapper {
-    padding-left: 0.5rem;
-    padding-right: 0rem;
+    padding-left: 1.6rem;
+    padding-right: 1rem;
   }
 
   .leftCol {
