--- a/packages/nouns-webapp/src/components/Bid/Bid.module.css
+++ b/packages/nouns-webapp/src/components/Bid/Bid.module.css
@@ -135,6 +135,7 @@
 @media (max-width: 992px) {
   .bidInput {
     border: none;
+    border: 1px solid #8c8d9275;
   }
 
   .customPlaceholder {
